--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: phelebra <xhelp00@gmail.com>               +#+  +:+       +#+         #
+#    By: phelebra <phelebra@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/11 17:20:39 by phelebra          #+#    #+#              #
-#    Updated: 2023/05/18 16:48:49 by phelebra         ###   ########.fr        #
+#    Updated: 2023/05/22 11:48:58 by phelebra         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
